@@ -1,5 +1,8 @@
 2008-09-09  Jakub Jelinek  <jakub@redhat.com>
 
+	PR target/37438
+	* gcc.dg/pr37438.c: New test.
+
 	PR c++/37389
 	* g++.dg/parse/enum4.C: New test.
 
